--- a/index.html
+++ b/index.html
@@ -2,53 +2,49 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>Sobre mim</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://code.s3.yandex.net/web-code/favicon.ico"
-    />
-    <link rel="stylesheet" href="/fonts/Inter.ttf">
-    <link rel="stylesheet" href="/fonts/PermanentMarker.ttf">
-    <link rel="stylesheet" href="/fonts/PermanentMarker.woff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="intro" content="Art gallery" />
+    <meta name="author" content="Luiz Hondo" />
+    <meta name="keywords" content="Art gallery" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="./pages/index.css" />
+
+    <title>Tripleten Art Gallery</title>
   </head>
-  <body class="page">
-    <header class="header">
-      <div class="overlay">
-        <h1 class="header-text">Luiz Hondo</h1>
-
-        
-      </div>
-    </header>
-    <section class="content">
-      <div class="card">
-        <img src="/images/carreira.jpg" alt="Imagem de pessoa subindo escadas" class="card-image">
-        <h6 class="card-title">Carreira</h6>
-        <p class="card-text">Recém-formado em Análise e Desenvolvimento de Sistemas, estou iniciando minha jornada na tecnologia para criar soluções eficientes</p>
-      </div>
-      <div class="card">
-        <img src="/images/skills.png" alt="Imagem de pessoa que carrega vários conhecimentos" class="card-image">
-        <h6 class="card-title">Habilidades</h6>
-        <p class="card-text">Experiência em web development, gestão administrativa e criação de imagens e vídeos, combinando tecnologia, criatividade e organização.</p>
-      </div>
-      <div class="card">
-        <img src="/images/modelagem.jpg" alt="Modelagem 3d de alienígena" class="card-image">
-        <h6 class="card-title">Hobby</h6>
-        <p class="card-text">Aprendo modelagem no ZBrush, explorando minha criatividade e conexão com o design.</p>
-      </div>
-      <div class="card">
-        <img src="/images/proposito.jpg" alt="Pessoa ajudando outra a subir o aclive" class="card-image">
-        <h6 class="card-title">Propósito</h6>
-        <p class="card-text">Minha meta é usar a tecnologia para ajudar pessoas e empresas a superarem desafios e alcançarem seus objetivos.</p>
-      </div>
-    </section>
-
-    <footer class="footer">
-        <p class="footer-text">
-          Luiz Hondo x TripleTen
-        </p>
-
-    </footer>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          src="images/logo.svg"
+          alt="Art Gallery Logo"
+          class="header__logo"
+        />
+      </header>
+      <main class="content">
+        <section class="lead">
+          <h1 class="lead__title">De Pátria para Pátria</h1>
+          <p class="lead__subtitle">
+            Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia
+          </p>
+          <img src="images/__image.jpg" alt="" class="lead__image" />
+        </section>
+        <section class="intro">
+          <h2 class="intro__title">
+            Conheça um pouco mais sobre a localização dos seus amigos
+          </h2>
+          <p class="intro__quote">
+            Cada pessoa é um artista livre, chamado a transformar as condições,
+            pensamentos e estruturas que moldam nossas vidas.
+          </p>
+          <p class="intro__author">— Joseph Beuys</p>
+          <p class="intro__text">
+            A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.
+          </p>
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="footer__copyright">© 2025. Luiz Hondo</p>
+      </footer>
+    </div>
   </body>
 </html>
