--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <section class="lead">
           <h1 class="lead__title">De Pátria para Pátria</h1>
           <p class="lead__subtitle">
-            Uma jornada épica do Kentucky ao Burundi pelo País de Gales e Ucrânia
+            Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
+            Ucrânia
           </p>
           <img src="images/__image.jpg" alt="" class="lead__image" />
         </section>
@@ -38,7 +39,15 @@
           </p>
           <p class="intro__author">— Joseph Beuys</p>
           <p class="intro__text">
-            A cidade de TripleTen reuniu profissionais de diversos cantos do mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar de onde viemos. Sinta-se à vontade para adicionar sua própria história e uma obra de arte visual dedicada à sua cidade natal à nossa coleção. Não importa de onde você é, estamos felizes por você ser nosso vizinho.
+            A cidade de TripleTen reuniu profissionais de diversos cantos do
+            mundo. Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar
+            histórias e fotos de algumas das pessoas que dedicam seu tempo e
+            esforço para fazer com que os futuros profissionais de tecnologia
+            desta cidade se sintam em casa. Cada um de nós tem uma história
+            única sobre o lugar de onde viemos. Sinta-se à vontade para
+            adicionar sua própria história e uma obra de arte visual dedicada à
+            sua cidade natal à nossa coleção. Não importa de onde você é,
+            estamos felizes por você ser nosso vizinho.
           </p>
         </section>
       </main>
