--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="intro" content="Art gallery" />
+    <meta name="description" content="Art gallery" />
     <meta name="author" content="Luiz Hondo" />
-    <meta name="keywords" content="Art gallery" />
+    <meta name="keywords" content="Art gallery, Art, Tripleten" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" href="./pages/index.css" />
 
