--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="author" content="Luiz Hondo" />
     <meta name="keywords" content="Art gallery, Art, Tripleten" />
     <link rel="stylesheet" href="./pages/index.css" />
-
     <title>Tripleten Art Gallery</title>
   </head>
   <body>
@@ -26,7 +25,11 @@
             Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
             Ucrânia
           </p>
-          <img src="images/__image.jpg" alt="" class="lead__image" />
+          <img
+            src="/images/__image.jpg"
+            alt="Imagem de paisagem"
+            class="lead__image"
+          />
         </section>
         <section class="intro">
           <h2 class="intro__title">
