--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Ucrânia
           </p>
           <img
-            src="/images/__image.jpg"
+            src="./images/__image.jpg"
             alt="Imagem de paisagem"
             class="lead__image"
           />
