--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
             Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
             Ucrânia
           </p>
-          <img
-            src="/images/__image.jpg"
-            alt="Imagem de paisagem"
-            class="lead__image"
-          />
+          <img class="lead__image" />
         </section>
         <section class="intro">
           <h2 class="intro__title">
