Fixed image is back on index.html and Added favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Luiz Hondo" />
     <meta name="keywords" content="Art gallery, Art, Tripleten" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Tripleten Art Gallery</title>
   </head>
   <body>
@@ -25,7 +26,11 @@
             Uma jornada épica do Kentucky ao Burundi pelo País de Gales e
             Ucrânia
           </p>
-          <img class="lead__image" />
+          <img
+            src="/images/image-1.jpg"
+            alt="Imagem de paisagem"
+            class="lead__image"
+          />
         </section>
         <section class="intro">
           <h2 class="intro__title">
