Fixed favicon icon, renamed image and removed unused images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Ucrânia
           </p>
           <img
-            src="./images/image-1.jpg"
+            src="./images/lead-image.jpg"
             alt="Imagem de paisagem"
             class="lead__image"
           />
