--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">© 2025. Luiz Hondo</p>
+        <p class="footer__copyright">&copy; 2025 Luiz Hondo</p>
       </footer>
     </div>
   </body>
