Import Images, Create all sections, Finished 1280px photo-grid section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,58 @@
             estamos felizes por você ser nosso vizinho.
           </p>
         </section>
+        <section class="photo-grid">
+          <img class="photo-grid__item" src="images/photo_1.png" alt="">
+          <img class="photo-grid__item" src="images/photo_2.png" alt="">
+          <img class="photo-grid__item" src="images/photo_3.png" alt="">
+          <img class="photo-grid__item" src="images/photo_4.png" alt="">
+          <img class="photo-grid__item" src="images/photo_5.png" alt="">
+          <img class="photo-grid__item" src="images/photo_6.png" alt="">
+          <img class="photo-grid__item" src="images/photo_8.png" alt="">
+          <img class="photo-grid__item" src="images/photo_7.png" alt="">
+        </section>
+        <section class="places">
+          <div class="places__place">
+            <h3 class="places__title"></h3>
+            <img src="" alt="" class="places__image">
+            <link rel="stylesheet" href="" class="places__website">
+              <places__url-heading></places__url-heading>
+              <places__artist></places__artist>
+            </link>
+            <p class="places__paragraph"></p>
+            <p class="places__paragraph"></p>
+          </div>
+          <div class="places__place">
+            <h3 class="places__title"></h3>
+            <img src="" alt="" class="places__image">
+            <link rel="stylesheet" href="" class="places__website">
+              <places__url-heading></places__url-heading>
+              <places__artist></places__artist>
+            </link>
+            <p class="places__paragraph"></p>
+            <p class="places__paragraph"></p>
+          </div>
+          <div class="places__place">
+            <h3 class="places__title"></h3>
+            <img src="" alt="" class="places__image">
+            <link rel="stylesheet" href="" class="places__website">
+              <places__url-heading></places__url-heading>
+              <places__artist></places__artist>
+            </link>
+            <p class="places__paragraph"></p>
+            <p class="places__paragraph"></p>
+          </div>
+          <div class="places__place">
+            <h3 class="places__title"></h3>
+            <img src="" alt="" class="places__image">
+            <link rel="stylesheet" href="" class="places__website">
+              <places__url-heading></places__url-heading>
+              <places__artist></places__artist>
+            </link>
+            <p class="places__paragraph"></p>
+            <p class="places__paragraph"></p>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2025 Luiz Hondo</p>
