Sprint 6 Project final 1

--- a/index.html
+++ b/index.html
@@ -54,55 +54,160 @@
           </p>
         </section>
         <section class="photo-grid">
-          <img class="photo-grid__item" src="images/photo_1.png" alt="">
-          <img class="photo-grid__item" src="images/photo_2.png" alt="">
-          <img class="photo-grid__item" src="images/photo_3.png" alt="">
-          <img class="photo-grid__item" src="images/photo_4.png" alt="">
-          <img class="photo-grid__item" src="images/photo_5.png" alt="">
-          <img class="photo-grid__item" src="images/photo_6.png" alt="">
-          <img class="photo-grid__item" src="images/photo_8.png" alt="">
-          <img class="photo-grid__item" src="images/photo_7.png" alt="">
+          <img class="photo-grid__item" src="images/photo_1.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_2.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_3.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_4.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_5.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_6.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_8.png" alt="" />
+          <img class="photo-grid__item" src="images/photo_7.png" alt="" />
         </section>
         <section class="places">
           <div class="places__place">
-            <h3 class="places__title"></h3>
-            <img src="" alt="" class="places__image">
-            <link rel="stylesheet" href="" class="places__website">
-              <places__url-heading></places__url-heading>
-              <places__artist></places__artist>
-            </link>
-            <p class="places__paragraph"></p>
-            <p class="places__paragraph"></p>
+            <h3 class="places__title">Criccieth, País de Gales</h3>
+            <div rel="stylesheet" href="#" class="places__website">
+              <p class="places__url-heading">ARTISTAS</p>
+              <p class="places__artist">Steffan Warren, editor-chefe</p>
+              <p class="places__artist">
+                Kseniya Glagoleva, gerente de projeto
+              </p>
+            </div>
+            <img src="/images/paisDeGales.png" alt="" class="places__image" />
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
+                A ruína medieval do Castelo de Cricieth tem vista para a cidade
+                abaixo de uma rocha que se projeta para o mar. Acredita-se que
+                tenha sido construído por Llewelyn, o Grande, no século XIII.
+                Cerca de 900 anos depois, a auto-intitulada *Pérola de Gales nas
+                margens de Snowdonia* tornou-se um destino turístico popular
+                durante os meses de verão.
+              </p>
+              <p class="places__paragraph">
+                A uma curta caminhada da estrada do castelo, você pode desfrutar
+                do melhor sorvete do mundo no Cadwalader's, cujo ingrediente
+                secreto, segundo rumores, são algas marinhas de origem local.
+                Outra reivindicação à fama é o fato de que Criccieth ganhou o
+                prêmio *Wales in Bloom* por cinco anos consecutivos por suas
+                espetaculares exibições florais pela cidade. Foi também a casa
+                de David Lloyd George, o único galês a ocupar o cargo de
+                primeiro-ministro do Reino Unido.
+              </p>
+            </div>
+            <div rel="stylesheet" href="" class="places__gradient">
+              <p class="places__gradient_text">
+                Compre esta obra de arte como NFT
+              </p>
+            </div>
           </div>
           <div class="places__place">
-            <h3 class="places__title"></h3>
-            <img src="" alt="" class="places__image">
-            <link rel="stylesheet" href="" class="places__website">
-              <places__url-heading></places__url-heading>
-              <places__artist></places__artist>
-            </link>
-            <p class="places__paragraph"></p>
-            <p class="places__paragraph"></p>
+            <h3 class="places__title">Berea, EUA</h3>
+            <div rel="stylesheet" href="#" class="places__website">
+              <p class="places__url-heading">ARTISTAS</p>
+              <p class="places__artist">Travis Turner, autor e editor</p>
+            </div>
+            <img src="/images/BereaEUA.png" alt="" class="places__image" />
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
+                Berea é uma pequena cidade localizada na parte central do
+                Kentucky. A cidade é cercada por belas florestas e campos. É
+                conhecida como a capital do artesanato do estado, e os
+                visitantes encontrarão muitas oportunidades de compras: lojas
+                com bijuterias artesanais, velas, artigos de madeira, galerias,
+                ateliês de vidro e muito mais. A cidade realiza um festival
+                anual que celebra o "pão de colher", um prato local feito com
+                pão de milho e servido com uma colher de pau.
+              </p>
+              <p class="places__paragraph">
+                No entanto, provavelmente é mais conhecido pela faculdade local.
+                O Berea College foi fundado em 1855 e foi o primeiro colégio no
+                sul a ser racialmente integrado, bem como o primeiro a ser
+                misto. De forma um tanto singular, não cobra mensalidades - todo
+                aluno recebe uma bolsa de estudos integral.
+              </p>
+            </div>
+            <div rel="stylesheet" href="" class="places__gradient">
+              <p class="places__gradient_text">
+                Compre esta obra de arte como NFT
+              </p>
+            </div>
           </div>
           <div class="places__place">
-            <h3 class="places__title"></h3>
-            <img src="" alt="" class="places__image">
-            <link rel="stylesheet" href="" class="places__website">
-              <places__url-heading></places__url-heading>
-              <places__artist></places__artist>
-            </link>
-            <p class="places__paragraph"></p>
-            <p class="places__paragraph"></p>
+            <h3 class="places__title">Muramvya, Burundi</h3>
+            <div rel="stylesheet" href="#" class="places__website">
+              <p class="places__url-heading">ARTISTAS</p>
+              <p class="places__artist">Grevisse Kenguruka, editor técnico</p>
+            </div>
+            <img src="/images/muramvya.png" alt="" class="places__image" />
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
+                Muramvya é uma das 18 províncias de Burundi. Na era do reino,
+                Muramvya era a capital real e em 2007, por causa de sua paisagem
+                cultural e natural, foi adicionada à Lista Provisória do
+                Patrimônio Mundial da UNESCO. Está localizada no centro de
+                Burundi, entre as capitais políticas e econômicas do país.
+              </p>
+              <p class="places__paragraph">
+                O clima é bastante frio à noite, mas durante o dia, você
+                pensaria que está no céu. A 2.665 metros (8.743 pés) acima do
+                nível do mar, o Monte Teza é um dos lugares mais frios da
+                província. Mas essa brisa fresca permite uma das maiores
+                plantações de chá e café do país, que representam a maior parte
+                das exportações do Burundi.
+              </p>
+              <p class="places__paragraph">
+                O Parque Nacional de Kibira, uma das maiores reservas de vida
+                selvagem para macacos, se sobrepõe a quatro províncias,
+                incluindo Muramvya. Este Parque Nacional encontra-se no ápice
+                das belas montanhas do Congo-Nile Divide, variando entre 1.550 e
+                2.660 metros de altitude. Está repleta de uma bela vegetação e
+                fonte para os vários rios e riachos que fornecem água em todo o
+                país.
+              </p>
+            </div>
+            <div rel="stylesheet" href="" class="places__gradient">
+              <p class="places__gradient_text">
+                Compre esta obra de arte como NFT
+              </p>
+            </div>
           </div>
           <div class="places__place">
-            <h3 class="places__title"></h3>
-            <img src="" alt="" class="places__image">
-            <link rel="stylesheet" href="" class="places__website">
-              <places__url-heading></places__url-heading>
-              <places__artist></places__artist>
-            </link>
-            <p class="places__paragraph"></p>
-            <p class="places__paragraph"></p>
+            <h3 class="places__title">Presidente Prudente, São Paulo</h3>
+            <div rel="stylesheet" href="#" class="places__website">
+              <p class="places__url-heading">ARTISTAS</p>
+              <p class="places__artist">Luiz Hondo, trabalhador</p>
+            </div>
+            <img
+              src="/images/presidenteprudente.png"
+              alt=""
+              class="places__image"
+            />
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
+                Presidente Prudente é uma cidade localizada no interior do
+                estado de São Paulo, sendo um importante polo regional do oeste
+                paulista. Fundada em 1917, a cidade recebeu esse nome em
+                homenagem ao presidente Prudente de Morais, o primeiro
+                presidente civil do Brasil. Com uma economia diversificada,
+                destaca-se nos setores de comércio, serviços, educação e
+                agropecuária, sendo um dos principais centros de negócios da
+                região.
+              </p>
+              <p class="places__paragraph">
+                Além disso, a cidade é conhecida por suas universidades, como a
+                UNOESTE, que atrai estudantes de várias partes do país.
+                Culturalmente, oferece eventos variados, teatros e parques,
+                sendo o Parque do Povo um ponto de encontro para atividades ao
+                ar livre. Com uma infraestrutura urbana desenvolvida, Presidente
+                Prudente combina o acolhimento do interior com o dinamismo de
+                uma cidade em constante crescimento.
+              </p>
+            </div>
+            <div rel="stylesheet" href="" class="places__gradient">
+              <p class="places__gradient_text">
+                Compre esta obra de arte como NFT
+              </p>
+            </div>
           </div>
         </section>
       </main>
