Fixed but still missing the gradient button issue

--- a/index.html
+++ b/index.html
@@ -66,14 +66,18 @@
         <section class="places">
           <div class="places__place">
             <h3 class="places__title">Criccieth, País de Gales</h3>
-            <div rel="stylesheet" href="#" class="places__website">
+            <div class="places__website">
               <p class="places__url-heading">ARTISTAS</p>
               <p class="places__artist">Steffan Warren, editor-chefe</p>
               <p class="places__artist">
                 Kseniya Glagoleva, gerente de projeto
               </p>
             </div>
-            <img src="/images/paisDeGales.png" alt="" class="places__image" />
+            <img
+              src="/images/paisDeGales.png"
+              alt="Imagem do país"
+              class="places__image"
+            />
             <div class="places__paragraphs">
               <p class="places__paragraph">
                 A ruína medieval do Castelo de Cricieth tem vista para a cidade
@@ -94,19 +98,21 @@
                 primeiro-ministro do Reino Unido.
               </p>
             </div>
-            <div rel="stylesheet" href="" class="places__gradient">
-              <p class="places__gradient_text">
-                Compre esta obra de arte como NFT
-              </p>
-            </div>
+            <a href="#" class="places__gradient places__gradient_text">
+              <p>Compre esta obra de arte como NFT</p>
+            </a>
           </div>
           <div class="places__place">
             <h3 class="places__title">Berea, EUA</h3>
-            <div rel="stylesheet" href="#" class="places__website">
+            <div class="places__website">
               <p class="places__url-heading">ARTISTAS</p>
               <p class="places__artist">Travis Turner, autor e editor</p>
             </div>
-            <img src="/images/BereaEUA.png" alt="" class="places__image" />
+            <img
+              src="/images/BereaEUA.png"
+              alt="Imagem do país"
+              class="places__image"
+            />
             <div class="places__paragraphs">
               <p class="places__paragraph">
                 Berea é uma pequena cidade localizada na parte central do
@@ -126,19 +132,21 @@
                 aluno recebe uma bolsa de estudos integral.
               </p>
             </div>
-            <div rel="stylesheet" href="" class="places__gradient">
-              <p class="places__gradient_text">
-                Compre esta obra de arte como NFT
-              </p>
-            </div>
+            <a href="#" class="places__gradient places__gradient_text">
+              <p>Compre esta obra de arte como NFT</p>
+            </a>
           </div>
           <div class="places__place">
             <h3 class="places__title">Muramvya, Burundi</h3>
-            <div rel="stylesheet" href="#" class="places__website">
+            <div class="places__website">
               <p class="places__url-heading">ARTISTAS</p>
               <p class="places__artist">Grevisse Kenguruka, editor técnico</p>
             </div>
-            <img src="/images/muramvya.png" alt="" class="places__image" />
+            <img
+              src="/images/muramvya.png"
+              alt="Imagem do país"
+              class="places__image"
+            />
             <div class="places__paragraphs">
               <p class="places__paragraph">
                 Muramvya é uma das 18 províncias de Burundi. Na era do reino,
@@ -165,21 +173,19 @@
                 país.
               </p>
             </div>
-            <div rel="stylesheet" href="" class="places__gradient">
-              <p class="places__gradient_text">
-                Compre esta obra de arte como NFT
-              </p>
-            </div>
+            <a href="#" class="places__gradient places__gradient_text">
+              <p>Compre esta obra de arte como NFT</p>
+            </a>
           </div>
           <div class="places__place">
             <h3 class="places__title">Presidente Prudente, São Paulo</h3>
-            <div rel="stylesheet" href="#" class="places__website">
+            <div class="places__website">
               <p class="places__url-heading">ARTISTAS</p>
               <p class="places__artist">Luiz Hondo, trabalhador</p>
             </div>
             <img
               src="/images/presidenteprudente.png"
-              alt=""
+              alt="imagem da cidade"
               class="places__image"
             />
             <div class="places__paragraphs">
@@ -203,11 +209,9 @@
                 uma cidade em constante crescimento.
               </p>
             </div>
-            <div rel="stylesheet" href="" class="places__gradient">
-              <p class="places__gradient_text">
-                Compre esta obra de arte como NFT
-              </p>
-            </div>
+            <a href="#" class="places__gradient places__gradient_text">
+              <p>Compre esta obra de arte como NFT</p>
+            </a>
           </div>
         </section>
       </main>
