Projeto 6 com correções

--- a/index.html
+++ b/index.html
@@ -54,14 +54,46 @@
           </p>
         </section>
         <section class="photo-grid">
-          <img class="photo-grid__item" src="images/photo_1.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_2.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_3.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_4.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_5.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_6.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_8.png" alt="" />
-          <img class="photo-grid__item" src="images/photo_7.png" alt="" />
+          <img
+            class="photo-grid__item"
+            src="images/photo_1.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_2.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_3.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_4.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_5.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_6.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_8.png"
+            alt="fotografia"
+          />
+          <img
+            class="photo-grid__item"
+            src="images/photo_7.png"
+            alt="fotografia"
+          />
         </section>
         <section class="places">
           <div class="places__place">
@@ -143,7 +175,7 @@
               <p class="places__artist">Grevisse Kenguruka, editor técnico</p>
             </div>
             <img
-              src="/images/muramvya.png"
+              src="images/muramvya.png"
               alt="Imagem do país"
               class="places__image"
             />
